--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "js-nacl",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Emscripten-compiled Javascript version of NaCl, the Networking and Cryptography library.",
-    "main": "build/nacl.js",
+    "main": "lib/nacl.js",
     "author": "Tony Garnock-Jones",
     "keywords": ["encryption", "high-level", "crypto", "networking", "nacl"],
     "repository" : {
